tests/ui/panic-handler-empty.rs
#![no_main]
#![no_std]

#[panic_handler]
fn foo() {}
